Moved save location of LaTeX to the draft directory and deleted extraneous files

--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -42,7 +42,7 @@ Upon receiving a bill from its corresponding legislative council, each committee
 \paragraph{Open Debate}
 Upon the passage of a bill from committee, the state governor shall schedule the bill for open discussion and debate for a time not less than seventy-two hours and in no less than three separate meetings of the deliberative assembly. Once the allotted discussion time has expired, the bill shall lay dormant for two days during which time representatives shall publicly issue any concerns and stand-asides or blocks. After those two days, the state governor shall schedule a vote. If the deliberative assembly fails to approve the bill, it shall vote to reject the bill. If this vote fails, a snap election shall be held.
 \paragraph{Stand-asides and Blocks}
-Stand-asides shall not be considered in vote tallying, quorum, or majority requirements when voting on a bill. A block causes the immediate return of a bill to its originating committee for further amendment and later re-introduction, but if blocked again, the legislative process of that bill shall terminate. A block must be sustained by more than one-third of the local representatives and may be issued only by a party representative. Each party representative shall be entitled to one non-transferable and non-renewable block per each term, but may use that block twice on the same bill.
+Stand-asides shall not be considered in vote tallying, quorum, or majority requirements when voting on a bill. A block causes the immediate return of a bill to its originating committee for further amendment and later re-introduction, but if blocked again, the legislative process of that bill shall terminate. A block must be sustained by more than one-fifth of the local representatives and may be issued only by a party representative. Each party representative shall be entitled to one non-transferable and non-renewable block per each term, but may use that block twice on the same bill.
 \subsubsection{Specific Powers}
 \paragraph{Subpoenas}
 The deliberative assembly or any committee may compel public officers, except judges, to provide sworn testimony.
