Added "resulting" to "cases from panel splits"
The sentence "The supreme court may not exercise discretion aso to trying cases from panel splits" lacked a clear grammatical structure prior to the substitution "resulting from" for "from".

-- Daniel J. Michael Write

--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -67,7 +67,7 @@ The supreme court shall consist of forty-five judges serving life terms. Vacanci
 \paragraph{Appeals from Other Courts}
 When a decision from a lower court is appealed, the supreme court shall select a panel of three of its judges by lot to try the case. If such a panel finds a judgment which the judges of the panel believe to conflict with the judgment of a previous panel, the judges shall move the case for final review by the supreme court.
 \paragraph{Final Review}
-One-third of the judges of the supreme court must consent to invoke final review on a case. Cases subject to final review shall be tried by the supreme court \textit{en banc}. The supreme court may not exercise discretion as to trying cases from panel splits.
+One-third of the judges of the supreme court must consent to invoke final review on a case. Cases subject to final review shall be tried by the supreme court \textit{en banc}. The supreme court may not exercise discretion as to trying cases resulting from panel splits.
 \paragraph{Judicial Review}
 The supreme court may not exercise judicial review, but in cases where a majority of judges deem that any laws in question are in violation of this constitution, the supreme court may stay proceedings and move the case to the constitutional court for judgment.
 \paragraph{Jurisdiction}
