Provided for life terms of auditors
Previously, the term of auditors was unfixed (thus presumed to be replaceable at any time by their appointors). Further, the court of auditors lacked any provision blocking the ability of auditors to be placed in other offices. To prevent the politicalization, and more importantly, the corruption of the court of auditors, clauses were added to those effects.

-- Daniel J. Michael Write

--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -93,7 +93,7 @@ No extraordinary courts shall be established. Courts for particular fields of la
 \paragraph{Sub-national Courts}
 Each sub-national government may create courts with jurisdiction over all justiciable matters within the borders of those courts. In all cases, judges shall be juridical nominees and shall not be elected.
 \paragraph{Court of Auditors}
-The constitutional court and the supreme court shall appoint a court of auditors to be comprised of juridical nominees not serving in other offices. The court of auditors shall have the power to investigate abuses of power and obstructions of justice by public officers and to charge those officers with those crimes. Members of the court of auditors shall be privileged from subpoena and impeachment.
+The constitutional court and the supreme court shall appoint a court of auditors to be comprised of juridical nominees not serving in other offices. The term of these auditors shall be their lives and auditors shall be ineligible for other public office after their terms. The court of auditors shall have the power to investigate abuses of power and obstructions of justice by public officers and to charge those officers with those crimes. Members of the court of auditors shall be privileged from subpoena and impeachment but may be removed at any time by the constitutional court or supreme court.
 \subsubsection{Judicial Norms}
 \paragraph{Reporting of Cases}
 All courts shall be courts of record. The decisions of all courts, along with the reasons therefor, shall be transmitted to the judicial council for official publication.
