Renamed the paragraph "Stare Decisis" to "Precedent"
-- Daniel J. Michael Write

--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -97,7 +97,7 @@ The constitutional court and the supreme court shall appoint a court of auditors
 \subsubsection{Judicial Norms}
 \paragraph{Reporting of Cases}
 All courts shall be courts of record. The decisions of all courts, along with the reasons therefor, shall be transmitted to the judicial council for official publication.
-\paragraph{\textit{Stare Decisis}}
+\paragraph{Precedent}
 For any court of law to reverse its precedent, a two-thirds majority of judges trying the case shall be necessary.
 \paragraph{Judicial Qualifications}
 Judges shall be juridical nominees and citizens of the state. Judges shall serve until they have attained seventy-five years of age whereupon their seat shall be declared vacant.
