--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -106,7 +106,7 @@ A juridical nominee is any person of at least twenty-five years of age who is in
 \newpage
 \subsection{State Councils}
 \subsubsection{Formation}
-\paragraph{In General}
+\paragraph{Establishment and Composition}
 Each state council shall be established by the deliberative assembly with specific and particular competencies and powers. Unless otherwise provided, each council shall be comprised of one qualified person appointed by the state governor and one qualified person appointed by the state governor and each party representative. 
 \paragraph{Qualifications}
 Members of a state council shall possess expertise in the competencies of their respective councils. Expertise may be measured in degrees or experience but shall not be subject to review by courts.
