Error in council composition clause was fixed
The error provided for the appointment of one member by "the state governor and the state governor." This was changed to "the state executive and state governor."

--- a/DJMW_Draft/DJMW_Draft.tex
+++ b/DJMW_Draft/DJMW_Draft.tex
@@ -107,7 +107,7 @@ A juridical nominee is any person of at least twenty-five years of age who is in
 \subsection{State Councils}
 \subsubsection{Formation}
 \paragraph{Establishment and Composition}
-Each state council shall be established by the deliberative assembly with specific and particular competencies and powers. Unless otherwise provided, each council shall be comprised of one qualified person appointed by the state governor and one qualified person appointed by the state governor and each party representative. 
+Each state council shall be established by the deliberative assembly with specific and particular competencies and powers. Unless otherwise provided, each council shall be comprised of one qualified person appointed by the state executive and one qualified person appointed by the state governor and each party representative. 
 \paragraph{Qualifications}
 Members of a state council shall possess expertise in the competencies of their respective councils. Expertise may be measured in degrees or experience but shall not be subject to review by courts.
 \paragraph{Prohibition on Dual Office}
